--- a/src/main/resources/static/phonebook.html
+++ b/src/main/resources/static/phonebook.html
@@ -17,6 +17,10 @@
             010-3333-3333
         </span>
     </div>
+    <!-- AJAX : HTTP 통신을 지원하는 라이브러리, JQuery 에서 지원 -->
+    <!-- 1. 최신 Jquery 라이브러리 필요, 주의할 점 : Jquery script 를 사용할 js 보다 위에 작성 -->
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="phonebook.js"></script>
+
 </body>
 </html>
