--- a/src/main/resources/static/board.html
+++ b/src/main/resources/static/board.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -7,44 +8,54 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
   <style>
-    body > div{
+    body>div {
       display: flex;
     }
-    body > div > div {
+
+    body>div>div {
       width: 33%;
     }
-    div{
+
+    div {
       padding: 10px;
       border: 2px solid black;
     }
-    table{
+
+    table {
       width: 100%;
       border-collapse: collapse;
     }
-    table th , table td{
-      border: 1px solid black;
-    } 
 
+    table th,
+    table td {
+      border: 1px solid black;
+    }
   </style>
 
 </head>
+
 <body>
 
   <div>
 
-    <div> 
+    <div class="">
       <h3> 등록 페이지 </h3>
-      제목 : <input id="titleInput" type="text"/> <br/>
-      내용 : <textarea id="contentInput"></textarea> <br/>
-      비밀번호 : <input id="passwordInput" type="text" /> <br/>
+      제목 : <input id="titleInput" type="text" /> <br />
+      내용 : <textarea id="contentInput"></textarea> <br />
+      비밀번호 : <input id="passwordInput" type="text" /> <br />
       <button onclick="_create()"> 등록 </button>
     </div>
-    
+
     <div>
       <h3> 전체 페이지 </h3>
       <table>
         <thead>
-          <tr> <th> 번호/인덱스 </th> <th>제목</th> <th>작성일</th> <th>조회수</tr>
+          <tr>
+            <th> 번호/인덱스 </th>
+            <th>제목</th>
+            <th>작성일</th>
+            <th>조회수
+          </tr>
         </thead>
 
         <tbody id="tableBody">
@@ -52,15 +63,16 @@
         </tbody>
       </table>
     </div>
-    
+
     <div id="viewPage">
 
     </div>
 
   </div>
 
-  <script  src="http://code.jquery.com/jquery-latest.min.js"></script> 
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src='board.js'></script>
 
 </body>
+
 </html>
